--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
 </html>
 
 	<div class="container">	
-		<header>
-			<h1>Employee Data Management</h1>
-			<p>A comprehensive Directory of Employee Billable Hours</p>
-		</header>
+		
+		<div class="jumbotron text-center">
+			<header>
+				<h1>Employee Data Management</h1>
+				<p>A comprehensive Directory of Employee Billable Hours</p>
+			</header>
+		</div>
 
-
-		<div class="panel panel-default">
+		<div class="panel panel-primary">
 			<div class="panel-heading">
 				Current Employees
 			</div>
@@ -35,22 +37,61 @@
 							<th class="col">Total Billed ($)</th>
 						</tr>
 					</thead>
-					<tbody>
-						<tr>
+					<tbody class="newEmployee">
+
+					<!-- INSERT NEW DIV HERE: -->						
+					<!-- <tr>
 							<td id="name"></td>
 							<td id="role"></td>
 							<td id="startDate"></td>
 							<td id="monthsWorked"></td>
 							<td id="rate"></td>
 							<td id="total"></td>
-						</tr>
+						</tr> -->
 					</tbody>
-
-
-
 				</table>
 				
 			</div>
+		</div>
+
+		<div class="panel panel-primary">
+			<div class="panel-heading">
+				Add Employee
+			</div>
+
+			<div class="panel-body">
+
+				<form>
+					<div class="form-group">
+		                <label for="nameInput">Employee Name</label>
+		                <input type="text" class="form-control" id="nameInput">
+	                </div>
+
+					<div class="form-group">
+		                <label for="roleInput">Role</label>
+		                <input type="text" class="form-control" id="roleInput">
+	                </div>
+
+					<div class="form-group">
+		                <label for="startInput">Start Date (DD/MM/YY ex: 01/01/89)</label>
+		                <input type="text" class="form-control" id="startInput">
+	                </div>
+
+					<div class="form-group">
+		                <label for="rateInput">Monthly Rate</label>
+		                <input type="text" class="form-control" id="rateInput">
+	                </div>
+
+					<div class="form-group">
+		                <button type="submit" class="btn btn-primary" id="submitButton">
+		                <div class="glyphicon glyphicon-plus"></div>
+		                Submit
+		              	</button>
+					</div>
+				</form>
+				
+			</div>
+			
 
 
 
