--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	  <meta charset="utf-8">
 	  <title>Employee Data Management</title>
 	  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-<!-- 	  <link rel="stylesheet" type="text/css" href="css/style.css">-->	
+ 	  <link rel="stylesheet" type="text/css" href="style.css">	
 	</head>
 
 
@@ -38,6 +38,7 @@
 							<th class="col">Months Worked</th>
 							<th class="col">Monthly Rate ($)</th>
 							<th class="col">Total Billed ($)</th>
+							<th class="col">Remove</th>
 						</tr>
 					</thead>
 					<tbody id="newEmployee">
@@ -77,7 +78,7 @@
 	                </div>
 
 					<div class="form-group">
-		                <label for="startInput">Start Date (DD/MM/YY ex: 01/01/89)</label>
+		                <label for="startInput">Start Date (ex: 01/01/1989)</label>
 		                <input type="date" class="form-control" id="startInput">
 	                </div>
 
