minor updates to comments in codes

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				<table class="table">
 					<thead>
 						<tr>
-							<th class="col">Employee Name</th>
+							<th class="col">Employee Full Name</th>
 							<th class="col">Role</th>
 							<th class="col">Start Date</th>
 							<th class="col">Months Worked</th>
