updated date format

--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
 					</thead>
 					<tbody id="newEmployee">
 
-					<!-- INSERT NEW DIV HERE: -->						
+					<!-- INSERT NEW DIV HERE with this format: -->			
+
 					<!-- <tr>
 							<td id="name"></td>
 							<td id="role"></td>
@@ -52,6 +53,7 @@
 							<td id="rate"></td>
 							<td id="total"></td>
 						</tr> -->
+						
 					</tbody>
 				</table>
 				
